<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/pag_lblTrocoPara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pag_txtTrocoPara"
        android:layout_alignBottom="@+id/pag_txtTrocoPara"
        android:layout_alignLeft="@+id/pag_lblFormaPag"
        android:text="@string/pag_trocoPara" />

    <Spinner
        android:id="@+id/pag_spFormaPag"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pag_txtTrocoPara"
        android:layout_alignParentTop="true"
        android:layout_marginTop="27dp"
        android:popupBackground="#363636" />

    <EditText
        android:id="@+id/pag_txtTrocoPara"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pag_spFormaPag"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/pag_txtValorTotal"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pag_lblValorTotal"
        android:layout_alignBottom="@+id/pag_lblValorTotal"
        android:layout_alignRight="@+id/pag_spFormaPag"
        android:layout_toRightOf="@+id/pag_lblTroco"
        android:gravity="end"
        android:text="@string/cardapio_valor"
        android:textColor="#228B22"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pag_txtTroco"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pag_lblTroco"
        android:layout_alignLeft="@+id/pag_txtValorTotal"
        android:layout_alignRight="@+id/pag_txtValorTotal"
        android:gravity="end"
        android:text="@string/cardapio_valor"
        android:textColor="#2f6699"
        android:textSize="17sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/pag_btnFinalizarPedido"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pag_lblTroco"
        android:layout_marginTop="56dp"
        android:background="@drawable/botao_preto"
        android:text="@string/pag_finalizar"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/pag_lblFormaPag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/pag_spFormaPag"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="14dp"
        android:text="@string/pag_formaPag" />

    <TextView
        android:id="@+id/pag_lblValorTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pag_txtTrocoPara"
        android:layout_below="@+id/pag_txtTrocoPara"
        android:layout_marginTop="30dp"
        android:text="@string/pag_valorTotal" />

    <TextView
        android:id="@+id/pag_lblTroco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pag_lblValorTotal"
        android:layout_below="@+id/pag_txtValorTotal"
        android:layout_marginTop="18dp"
        android:text="@string/pag_troco" />

    <Button
        android:id="@+id/pag_btnCancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pag_btnFinalizarPedido"
        android:background="@drawable/botao_vermelho"
        android:text="@string/cancelar_pedido"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>