<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/confirmacao_listItens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/confirmacao_btnAdicionar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </ListView>

    <Button
        android:id="@+id/confirmacao_btnAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="17dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/botao_azul"
        android:text="@string/confirmacao_adicionar"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirmacao_txtValorTotal"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/confirmacao_lblValorTotal"
        android:layout_alignBottom="@+id/confirmacao_lblValorTotal"
        android:layout_alignRight="@+id/confirmacao_btnAdicionar"
        android:gravity="end"
        android:text="@string/cardapio_valor"
        android:textColor="#228B22"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/confirmacao_lblValorTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/confirmacao_btnAdicionar"
        android:layout_below="@+id/confirmacao_btnAdicionar"
        android:layout_marginTop="28dp"
        android:text="@string/cardapio_valor_total" />

    <Button
        android:id="@+id/confirmacao_btnConfirmar"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/confirmacao_txtValorTotal"
        android:layout_marginTop="24dp"
        android:background="@drawable/botao_preto"
        android:text="@string/confirmacao_confirmar"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/confirmacao_btnCancelar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/confirmacao_btnConfirmar"
        android:background="@drawable/botao_vermelho"
        android:text="@string/cancelar_pedido"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>