<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_pag"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <RelativeLayout 
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    
        <TextView
            android:id="@+id/pag_lblTroco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pag_lblValorTotal"
            android:layout_below="@+id/pag_txtValorTotal"
            android:layout_marginTop="25dp"
            android:text="@string/pag_troco"
            android:textSize="22sp" />
    
        <TextView
            android:id="@+id/pag_lblFormaPag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/pag_spFormaPag"
            android:layout_marginRight="60dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/pag_spFormaPag"
            android:text="@string/pag_formaPag"
            android:textSize="20sp" />
    
        <TextView
            android:id="@+id/pag_lblTrocoPara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/pag_txtTrocoPara"
            android:layout_alignRight="@+id/pag_lblFormaPag"
            android:text="@string/pag_trocoPara"
            android:textSize="20sp" />
    
        <TextView
            android:id="@+id/pag_txtTroco"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/pag_lblTroco"
            android:layout_alignLeft="@+id/pag_txtValorTotal"
            android:gravity="end"
            android:text="@string/cardapio_valor"
            android:textColor="#2f6699"
            android:textSize="25sp"
            android:textStyle="bold" />
    
        <EditText
            android:id="@+id/pag_txtTrocoPara"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/pag_spFormaPag"
            android:layout_below="@+id/pag_spFormaPag"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp" >
    
            <requestFocus />
        </EditText>
    
        <Spinner
            android:id="@+id/pag_spFormaPag"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:popupBackground="#363636" />
    
        <TextView
            android:id="@+id/pag_txtValorTotal"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/pag_lblValorTotal"
            android:layout_toRightOf="@+id/pag_spFormaPag"
            android:gravity="end"
            android:text="@string/cardapio_valor"
            android:textColor="#228B22"
            android:textSize="25sp"
            android:textStyle="bold" />
    
        <Button
            android:id="@+id/pag_btnCancelar"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/pag_btnFinalizarPedido"
            android:background="@drawable/botao_vermelho"
            android:text="@string/cancelar_pedido"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />
    
        <Button
            android:id="@+id/pag_btnFinalizarPedido"
            android:layout_width="400dp"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/pag_lblTroco"
            android:layout_marginTop="61dp"
            android:background="@drawable/botao_preto"
            android:text="@string/pag_finalizar"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />
    
        <TextView
            android:id="@+id/pag_lblValorTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pag_txtTrocoPara"
            android:layout_marginTop="53dp"
            android:layout_toRightOf="@+id/pag_txtTrocoPara"
            android:text="@string/pag_valorTotal"
            android:textSize="22sp" />
    
    </RelativeLayout>
</ScrollView>