<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PizzariaActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/verde_home"
        android:contentDescription="@string/app_name" android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/vermelho_home"
        android:contentDescription="@string/app_name" android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/home_btnConfig"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/home_btnPedidosRecentes"
        android:layout_below="@+id/home_btnPedidosRecentes"
        android:layout_marginTop="15dp"
        android:background="@drawable/black_button"
        android:text="@string/home_config"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
         />

    <Button
        android:id="@+id/home_btnPedidosRecentes"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/home_btnCardapio"
        android:layout_centerVertical="true"
        android:background="@drawable/black_button"
        android:text="@string/home_pedidos_recentes"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <Button
        android:id="@+id/home_btnCardapio"
        android:layout_width="220dp"
        android:layout_height="60dp"
        android:layout_above="@+id/home_btnPedidosRecentes"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/black_button"
        android:text="@string/home_ver_cardapio"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

</RelativeLayout>